--- a/apps/SdkController/assets/intro_help.html
+++ b/apps/SdkController/assets/intro_help.html
@@ -32,8 +32,10 @@ To use it, do the following: <br/>
 <ol>
 <li>Connect your device to your computer via USB. Make sure to enable <i>USB Debugging</i> in <i>Settings &gt; Developer Options</i>. </li>
 <li>Start this application on your device. </li>
-<li>On the computer in a shell, run: <br/><i>adb forward tcp:1970 localhost:android.sdk.controller</i> </li>
-<li>Finally <b>run an emulator</b> with an AVD targetting <b>API 15</b>. </li>
+<li>On the computer in a shell, run: <br/><i>adb forward tcp:1970 localabstract:android.sdk.controller</i> </li>
+<li>Finally <b>run an emulator</b> with an AVD targetting <b>API 15</b>.
+Multi-touch emulation must be explicitly enabled in emulator either by setting "Touch screen type" property to "multi-touch" in AVD Manager,
+or by starting the emulator with "-screen multi-touch" option.</li>
 </ol>
 <a href="https://sites.google.com/a/android.com/tools/recent/sensoremulation">Read more.</a>
 </body>
